# Element-2.0

./: .gitignore  LICENSE
ElementEngine/: CMakeLists.txt
ElementEngine/app/: CMakeLists.txt
ElementEngine/app/src/: Game.cpp  Game.hpp  Object.cpp  Object.hpp  main.cpp
ElementEngine/enginelib/: CMakeLists.txt
ElementEngine/enginelib/include/element/: Camera.h  DebugWindow.h  Debugger.h  ElementConstants.h  Engine.h  Entity.h  Framework.h  GameSettings.h  IdHandler.h  InputIndices.h  Inputs.h  Light.h  Model.h  Renderer.h  Sprite.h  Time.h  Transform.h  Transform2D.h  Utilities.h  Window.h
ElementEngine/enginelib/include/element/Maths/: Vec2.h  Vec3.h  Vec4.h
ElementEngine/enginelib/libs/: ReadMe.txt
ElementEngine/enginelib/libs/glfw/: CMakeLists.txt
ElementEngine/enginelib/libs/glm/: CMakeLists.txt
ElementEngine/enginelib/libs/imgui/: CMakeLists.txt
ElementEngine/enginelib/libs/stb/: CMakeLists.txt
ElementEngine/enginelib/libs/tinyobjloader/: CMakeLists.txt
ElementEngine/enginelib/src/: Buffer.cpp  Buffer.h  Camera.cpp  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DebugRenderer.cpp  DebugRenderer.h  DebugWindow.cpp  Debugger.cpp  DefaultResources.cpp  DefaultResources.h  DescriptorInfo.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  EleCamera.cpp  EleCamera.h  Engine.cpp  Framework.cpp  ImGUI_.cpp  ImGUI_.h  Image.cpp  Image.h  Inputs.cpp  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Locator.cpp  Locator.h  LogicalDevice.cpp  LogicalDevice.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  (+50 more)
ElementEngine/enginelib/src/Camera/: Camera.cpp  EleCamera.cpp  EleCamera.h
ElementEngine/enginelib/src/Components/: Collider.cpp  Collider.h  Component.cpp  Component.h
ElementEngine/enginelib/src/Debug/: DebugRenderer.cpp  DebugRenderer.h  DebugWindow.cpp  Debugger.cpp  ValidationLayers.h
ElementEngine/enginelib/src/Engine/: Engine.cpp  VknRenderer.cpp  VknRenderer.h
ElementEngine/enginelib/src/Entities/: GameObject.cpp  GameObject.h  Sprite.cpp  VknModel.cpp  VknModel.h  VknSprite.cpp  VknSprite.h
ElementEngine/enginelib/src/ImGUI_/: ImGUI_.cpp  ImGUI_.h
ElementEngine/enginelib/src/Inputs/: Inputs.cpp
ElementEngine/enginelib/src/Lighting/: Light.cpp  LightManager.cpp  LightManager.h
ElementEngine/enginelib/src/Maths/: Vec2.cpp  Vec3.cpp  Vec4.cpp
ElementEngine/enginelib/src/Misc/: IdHandler.cpp  Locator.cpp  Locator.h  Renderer.cpp  Time.cpp  Transform.cpp  Utilities.cpp  Utilities.h
ElementEngine/enginelib/src/Physics/: Physics.cpp  Physics.h
ElementEngine/enginelib/src/Physics/Collider/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h
ElementEngine/enginelib/src/Resource/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Resources.cpp  Resources.h
ElementEngine/enginelib/src/Shader/: Shader.cpp  Shader.h
ElementEngine/enginelib/src/Texture/: Texture.cpp  Texture.h
ElementEngine/enginelib/src/Vulkan/: VkFunctions.cpp  VkFunctions.h  VkInitializers.h  VknBuffer.cpp  VknBuffer.h  VknConstants.h  VknImage.cpp  VknImage.h  VknInstance.cpp  VknInstance.h
ElementEngine/enginelib/src/Vulkan/Allocator/: Allocator.cpp  Allocator.h  BufferAllocator.cpp  BufferAllocator.h  MemoryAllocator.cpp  MemoryAllocator.h
ElementEngine/enginelib/src/Vulkan/CommandPool/: VknCommandBuffer.cpp  VknCommandBuffer.h  VknCommandPool.cpp  VknCommandPool.h
ElementEngine/enginelib/src/Vulkan/Device/: Device.cpp  Device.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h
ElementEngine/enginelib/src/Vulkan/Pipeline/: DescriptorInfo.h  Pipeline.cpp  Pipeline.h  PipelineData.h  PipelineManager.cpp  PipelineManager.h  VknDescriptorPool.cpp  VknDescriptorSet.cpp  VknDescriptorSet.h  VknPipeline.cpp  VknPipeline.h
ElementEngine/enginelib/src/Vulkan/RenderPass/: VknFrameBuffers.cpp  VknFrameBuffers.h  VknRenderPass.cpp  VknRenderPass.h
ElementEngine/enginelib/src/Vulkan/SwapChain/: VknSwapChain.cpp  VknSwapChain.h
ElementEngine/enginelib/src/Window/: GlfwWindow.cpp  GlfwWindow.h  Window.cpp
ElementEngine/resources/materials/: test.mtl
ElementEngine/resources/shaders/: collider.bat  collider.frag  collider.frag.spv  collider.vert  collider.vert.spv  defaultLighting.bat  defaultLighting.frag  defaultLighting.frag.spv  defaultLighting.geom  defaultLighting.geom.spv  defaultLighting.spv  defaultLighting.vert  defaultLighting.vert.spv  defaultPBR.bat  defaultPBR.frag  defaultPBR.vert  defaultPBR.vert.spv  errors.txt  output.txt  shader.bat  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader2.bat  shader2.frag  shader2.frag.spv  shader2.vert  shader2.vert.spv  shader3.frag  shader3.frag.spv  shader3.vert  shady.bat
ElementEngine/resources/shaders/n/: shader3.bat  shader3.frag
